015-aws-ec2-maria-db/aws-instance.tf
resource "aws_instance" "application-server" {
  ami           = var.AMIS[var.AWS_REGION]
  instance_type = "t2.micro"

  # the VPC subnet
  subnet_id = aws_subnet.main-public-1.id

  # the security group
  vpc_security_group_ids = [aws_security_group.instance-security-group.id]

  # the public SSH key
  key_name = aws_key_pair.mykeypair.key_name

  # user data
  user_data = data.template_cloudinit_config.cloudinit-startup-script.rendered

  # tags
  tags = {
    Name        = "application-server"
    ServiceName = "Test"
  }
}
